<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pippoLabel"
        android:text="@string/pippo"
        android:fontFamily="@font/heineken"
        android:textColor="@color/green_dark"
        android:textSize="30sp"
        android:elevation="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingTop="5dp"
        android:elevation="20dp"
        android:fontFamily="@font/heineken"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageBlu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@null"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/ic_blu"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/botaoBlu" />

    <View
        android:id="@+id/containerComponentsTop"
        style="@style/ContainerComponents"
        android:layout_height="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pippoLabel"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/containerComponentsLeft"
        style="@style/ContainerComponentsRedondoSmall"
        android:layout_width="80dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsTop"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsTop" />

    <TextView
        android:id="@+id/textPorcen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="75%"
        android:textSize="30sp"
        android:textStyle="bold"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsLeft"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsLeft"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsLeft"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsLeft"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/heineken"
        android:text="@string/agua"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsLeft"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsLeft"
        app:layout_constraintTop_toBottomOf="@+id/containerComponentsLeft"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/containerComponentsMiddle"
        style="@style/ContainerComponentsRedondoSmall"
        android:layout_width="80dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsTop"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsTop"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsTop" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsMiddle"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsMiddle"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsMiddle"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsMiddle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/heineken"
        android:text="@string/temperatura"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsMiddle"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsMiddle"
        app:layout_constraintTop_toBottomOf="@+id/containerComponentsMiddle"
        tools:ignore="TextContrastCheck,VisualLintOverlap" />

    <View
        android:id="@+id/containerComponentsRight"
        style="@style/ContainerComponentsRedondoSmall"
        android:layout_width="80dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsTop"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsTop" />

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsRight"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRight"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsRight"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsRight"
        android:contentDescription="Imagem clima"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/heineken"
        android:text="@string/clima"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRight"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsRight"
        app:layout_constraintTop_toBottomOf="@+id/containerComponentsRight"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/containerComponentsRedondo"
        style="@style/ContainerComponentsRedondo"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_marginEnd="3dp"
        android:elevation="30dp"
        app:layout_constraintTop_toBottomOf="@id/containerComponentsTop"
        app:layout_constraintBottom_toTopOf="@+id/containerComponentsBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:elevation="30dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="@+id/containerComponentsRedondo"
        app:layout_constraintBottom_toBottomOf="@+id/containerComponentsRedondo"
        app:layout_constraintStart_toStartOf="@+id/containerComponentsRedondo"
        app:layout_constraintEnd_toEndOf="@+id/containerComponentsRedondo"
        android:contentDescription="@string/image" />

    <View
        android:id="@+id/containerComponentsBottom"
        style="@style/ContainerComponents"
        android:layout_marginBottom="11dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/ButtonConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="@id/containerComponentsBottom"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsBottom"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsBottom"
        app:srcCompat="@drawable/ic_config"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/botao1" />

    <ImageButton
        android:id="@+id/ButtonFlor"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:background="@null"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="@id/containerComponentsBottom"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsBottom"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsBottom"
        app:layout_constraintStart_toStartOf="@id/containerComponentsBottom"
        app:srcCompat="@drawable/ic_flor"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/botao2" />

    <ImageButton
        android:id="@+id/ButtonInfo"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="@id/containerComponentsBottom"
        app:layout_constraintBottom_toBottomOf="@id/containerComponentsBottom"
        app:layout_constraintStart_toStartOf="@id/containerComponentsBottom"
        app:srcCompat="@drawable/ic_info"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/botao3" />

</androidx.constraintlayout.widget.ConstraintLayout>